| Summary: | ASTERISK-24693: Investigate and fix memory leaks in Asterisk | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2015-01-15 12:46:52.000-0600 | Date Closed: | 2015-01-23 09:14:24.000-0600 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | |
| Versions: | SVN 13.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | During some testing Asterisk was found to be leaking memory. Investigate and plug any leaks found. | ||
| Comments: | |||